# unifi-dyndns

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/unifi_dyndns/: main.py
tests/: test_main.py
